--- a/lands.API/Web.config
+++ b/lands.API/Web.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-lands.API-20180303080603.mdf;Initial Catalog=aspnet-lands.API-20180303080603;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+      connectionString="Data Source=miservidorp.database.windows.net;Initial Catalog=mibase;Persist Security Info=True;User=brus;Password=Deutschland00"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
