--- a/lands.API/lands.API.csproj
+++ b/lands.API/lands.API.csproj
@@ -315,6 +315,12 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lands2.Domain\Lands2.Domain.csproj">
+      <Project>{f6b7fb78-ab91-4796-9aac-001c51905fd0}</Project>
+      <Name>Lands2.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
