--- a/Lands.Backend/Web.config
+++ b/Lands.Backend/Web.config
@@ -17,7 +17,11 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="AdminUser" value="brusssli@hotmail.com" />
+    <add key="AdminPassWord" value="deutschland00" />   
+    <add key="SMTPName" value="smtp.hotmail.com" />
+    <add key="SMTPPort" value="425" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
