--- a/Lands2/Lands2.Android/Lands2.Android.csproj
+++ b/Lands2/Lands2.Android/Lands2.Android.csproj
@@ -146,5 +146,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_translations_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_insert_chart.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_exit_to_app.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
