--- a/Lands2/Lands2.iOS/Lands2.iOS.csproj
+++ b/Lands2/Lands2.iOS/Lands2.iOS.csproj
@@ -165,5 +165,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\ic_chevron_right.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_menu.png" />
+  </ItemGroup>
 </Project>
