--- a/Lands2/Lands2.iOS/Lands2.iOS.csproj
+++ b/Lands2/Lands2.iOS/Lands2.iOS.csproj
@@ -174,4 +174,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\ic_menu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\no_image.png" />
+  </ItemGroup>
 </Project>
