--- a/Lands2/Lands2.Android/Lands2.Android.csproj
+++ b/Lands2/Lands2.Android/Lands2.Android.csproj
@@ -167,5 +167,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_menu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\no_image.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
