--- a/Lands2/Lands2.iOS/Lands2.iOS.csproj
+++ b/Lands2/Lands2.iOS/Lands2.iOS.csproj
@@ -120,6 +120,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MvvmLightLibs">
+      <Version>5.4.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.1.1</Version>
     </PackageReference>
